--- a/gb/25/2/4/n14429593.md
+++ b/gb/25/2/4/n14429593.md
@@ -1,16 +1,16 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
 <table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>上海专家直面药品集采弊端 当局被迫部分妥协</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2025/02/id14429658-f7647ea7ded2101255cab68d326b5fb0-600x400.png" />
-<h6>上海瑞金医院普外科主任医师郑民华公开批评中共药品集采政策，为民发声。（网络截图）
+<tr><td VALIGN=TOP width="626"><h2 align=center>专家直言药品集采弊端 上海被迫部分妥协</h2>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2022/07/id13780661-000_Hkg2267999-600x400-1.jpg" />
+<h6>中国日前有上千种药品被剔除了中国的医保报销目录，其中包括大量的基础药品，这无疑加重了中国老百姓的医疗负担。图为工人在安徽省淮北市的一家工厂包装药品。(STR / AFP)
 </h6>
 <hr>
-	<p>【大纪元2025年02月04日讯】（大纪元记者骆亚报导）上海专家郑民华主任医师等一批医护人员对中共国家医保局集采政策发出大胆批评声后，不仅赢得民间赞誉，同时医保局也被迫做出部分妥协，上海医院被通知可以继续开高血压原研药。</p>
-<p>上海华山医院的一名女医师、网民Snow日前在自媒体上披露，国家医保局1月20日派人到上海，听取上海专家对集采药政策和质量的意见。</p>
-<p>与会的专家中有一位是上海市瑞金医院普外科主任郑民华。</p>
+	<p>【大纪元2025年02月04日讯】（大纪元记者骆亚报导）上海专家郑民华主任医师等一批医护人员对中共国家医保局集采政策发出大胆批评声后，医保局被迫做出部分妥协，上海医院被通知可以继续开高血压原研药。</p>
+<p>上海华山医院的一名女医师、网民Snow日前在自媒体上披露，国家医保局1月20日派人到上海，听取上海专家对集采药政策和质量的意见。与会的专家中有一位是上海市瑞金医院普外科主任郑民华。</p>
 <p>该女医师感叹表示，“郑教授有时代的忧患精神与责任感，能够这样大胆地说出来：‘麻药不麻、泻药不泻、降压的不降、降糖的不降’，我认为说得非常好。”</p>
 <p>郑教授在接受大陆媒体采访时，也表达同样观点，他还说，“以前用合资或进口麻药，时间能算得很准，现在却不行了。原本一支麻药就能让病人‘睡着’，现在得用三四支才行。”</p>
+<figure id="attachment_14429658" aria-describedby="caption-attachment-14429658" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/02/id14429658-f7647ea7ded2101255cab68d326b5fb0.png"><img decoding="async" class="size-large wp-image-14429658" src="https://i.epochtimes.com/assets/uploads/2025/02/id14429658-f7647ea7ded2101255cab68d326b5fb0-600x442.png" alt="" width="600" b="442" /></a><figcaption id="caption-attachment-14429658" class="wp-caption-text">上海瑞金医院普外科主任医师郑民华公开批评中共药品集采政策，为民发声。（网络截图）</figcaption></figure>
 <p>全国各地的网友也在该医师视频评论区留言，很多人点赞感谢郑教授为民说话，并证实郑教授的说法。</p>
 <p>浙江的网友表示，“我爸高血压、高血糖就是降不下来，反而还高了。换回原来的药才降下来的，唉老百姓能怎么办！感谢郑教授说出老百姓的无奈。”</p>
 <p>有上海网友也表示，“我爸爸也是，现在很多医院不给开进口药了。”</p>
@@ -25,41 +25,46 @@
 <p>她强调，“今天我看到很多的专家在说，我们不能只给老百姓一种渠道的选择，你要给他多种渠道，集采、降本，希望能够有更多的人能够享受到这样的一个基础医疗，这个是没有问题的，大家也是拥护的，但是不能只有一种渠道、就是强民强买。”</p>
 <p>她进一步介绍道，只要你是患者，只要你有这个需求，你就必须要强买，要不然你就没有，要不然你就只能去你统筹的，根本就不可能花到这个钱，那么就是你个人的医保账户。</p>
 <p>“那么你个人的医保账户如果支付不了的，那你就是走自费这个渠道，我觉得都没有问题，但是你一定要给别人这样的一个选择，尤其是我们的患者。”</p>
-<h2>“医生的天职就是负责”</h2>
-<p>该女医师将她的视频取名为“医生的天职是负责”，她引用苏格拉底格言说，“医生的宣誓上，就是医生他有悲悯之心，感同天下的这些慈悲为怀。因为我们要救治，因为我们对这个生命的敬重，所以医生是最有悲悯之心，也是最愿意说实话的一群人。”</p>
-<p>她强调，那么面对这样的一个社会现象、社会制度，或者说是政府采取的一些手段，那么我们的医生愿意为大家的疾苦去发声，希望通过合理的有效的反馈和不同的声音，有来自于患者的，来自于这个大医院、小医院、社区医院、乡村医院的医生等都能把自己的心声反馈出来。</p>
+<p>该女医师将她的视频取名为“医生的天职是负责”。她强调，那么面对这样的一个社会现象、社会制度，或者说是政府采取的一些手段，那么我们的医生愿意为大家的疾苦去发声，希望通过合理的有效的反馈和不同的声音，有来自于患者的，来自于这个大医院、小医院、社区医院、乡村医院的医生等都能把自己的心声反馈出来。</p>
+<h2>上海被迫部分妥协 郑教授的微博被注销</h2>
 <p>据网易微信公众号“风向观察”1月24日的消息，继郑教授之后又有二十多名医护人员勇敢发声，反映集采的药品、医疗器械质量问题。随后上海的医院接到通知，高血压可以开原研药了！</p>
-<p>但令人遗憾的是，1月22日郑教授的微博被注销了。</p>
+<p>令人遗憾的是，1月22日郑教授的微博被注销了。</p>
+<p>不过，第一财经报道，进口原研药供给并不稳定。临床医生的反馈指出，虽然大医院可开具多种高血压进口药，但一些特定的药物如辉瑞的苯磺酸氨氯地平片（络活喜）却存在明显的供需不平衡，造成普通门诊有时“无药可开”。</p>
+<p>面对患者群体普遍反映的进口药短缺问题，有医生认为，这也与医院完成国产仿制药供应任务的指标有关。</p>
 <p>责任编辑：高静#</p>
-	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/22/n14419638.md#1">千百度：集采药为何引发大陆民众恐慌和不满</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14422083.md#1">张菁：国产仿制药引发巨大争议的背后</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/27/n14423249.md#1">袁斌：涉嫌造假 中共药监局陷“数据门”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/28/n14423759.md#1">【翻墙必看】蛇年是中共晦气之年</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/6/12/n3284139.md#1">沉粹典丽 风骨逆劲──唐初四大书法家之 虞世南</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/10/7/n3394783.md#1">后世圭臬 唐楷第一书家欧阳询</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/16/7/2/n8059920.md#1">【千古英雄人物】唐太宗(22) 墨海椽笔</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/12/n9133922.md#1">【书法漫谈】书法家的对话：放松与放纵</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163925.md#1">唐代书法漫谈（1）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163955.md#1">唐代书法漫谈（2）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163956.md#1">唐代书法漫谈（3）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/19/1/16/n10979954.md#1">仁心执法 让死刑判起来更难的唐太宗</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/22/1/16/n13507994.md#1">【书法漫谈】中国书法的神性特点</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/23/6/29/n14025211.md#1">宏硕壮阔 最具帝王气象的唐太宗诗歌</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/23/n12707407.md#1" target="_blank">闻欣：钱学森为何拒绝反对法轮功？</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/18/n10793353.md#1" target="_blank">林辉：金庸堂哥穆旦走到了幻想的尽头</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/11/n11377666.md#1" target="_blank">平凡人不凡的修炼经历</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/23/n12706455.md#1" target="_blank">“天安门自焚”伪案八大悬疑人物</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/2/14/n10143963.md#1" target="_blank">中共进入联合国与尼克松访华内幕（下）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/8/5/11/n2112872.md#1" target="_blank">法轮功受难中重建中华价值观</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/29/n10750586.md#1">张飞转世？岳家将牛皋怒喝退金兵</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/2/5/n14174106.md#1">围炉过年：从除夕到元日的民俗守护人心中的善</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426554.md#1">组图：台湾故宫新年推“岁时吉庆”文物特展</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/5/n14406436.md#1">古代的中国人是如何过年的？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/13/n10781725.md#1">宋祁穷得差点“吃剑” 金榜题名后变富贵</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/1/n14426794.md#1">【时事金扫描】华裔之星陨落 美空难至少三原因</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/1/n14427439.md#1">【军事情报局】中共为什么害怕美国堤丰系统？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/1/n14426881.md#1">【车评】平民欧洲车 2025 Volkswagen Jetta SEL</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426726.md#1">超级大陆藏身地下？新研究或颠覆人类认知</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/1/n14426798.md#1">沈舟：中共想攻台 但其海军陆战队没战斗力</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/2/n14427721.md#1">F-22战机为什么无法在航母上降落？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426712.md#1">王菲央视春晚含泪 被爆其父母哥哥均已离世</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/1/n14427171.md#1">宫﨑骏《风之谷》首登台湾大银幕 3月上映</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/3/n14428784.md#1">大S日本猝逝“暂无法返台” 徐妈悲发声明曝遗愿</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/1/n14427530.md#1">赵丽颖大年初二晒拜年照 俏皮试戴奶奶的帽子</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/3/n14428726.md#1">大S猝逝消息震惊亚洲 演艺圈星友齐哀悼</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/29/n14424919.md#1">新研究揭示咖啡对肠道的独特影响</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/2/n14428051.md#1">为什么未来飞机的座椅将由生物塑胶制造？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/29/n14424895.md#1">姜黄吃多伤肝？ 五代中医教你正确食用方法</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426062.md#1">早餐如何吃？ 七原则让你健康又减脂</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/1/n14427445.md#1">【健康1+1】最简单有效的长寿方法</a></li>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/2/4/n14429593.htm">上海专家直面药品集采弊端 当局被迫部分妥协</a></p><hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540909.md#1">【未解之谜】“午夜之锤”早已被预知？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544980.md#1">【直播】川普签署“大而美法案”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545641.md#1">【马克时空】服务一甲子 F-5告别台湾天空</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545198.md#1">【车评】越野猛兽  2025 Toyota Tundra TRD Rally</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544420.md#1">罗马仕被曝停工停产 数十万充电宝无钱退款</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544361.md#1">德媒：中国电动车市场泡沫即将破裂</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545591.md#1">杨幂上台不慎踩裙?跌倒 临场反应令人惊叹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545630.md#1">陈思诚新片票房惨淡 上映首日9小时仅卖395万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545423.md#1">第27届台北电影奖完整名单 《大风之岛》摘首奖</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542256.md#1">避免洗肾 中医传统疗法助肾功能回升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543926.md#1">专家：经常做恶梦的人 早死概率增为3倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542657.md#1">香蕉的颜色和斑点透露了什么</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540707.md#1">夏日沙拉这样做 清爽又健康 色彩缤纷又开胃</a></li>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/2/4/n14429593.htm">专家直言药品集采弊端 上海被迫部分妥协</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/25/2/4/n14429593.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
